Added Drinniol to Module, added translations

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "assets/sounds/M1"]
 	path = assets/sounds/M1
 	url = https://github.com/RiseRobotRise/M1A1-Sounds.git
+[submodule "assets/Characters"]
+	path = assets/Characters
+	url = https://github.com/RiseRobotRise/Characters.git
